// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApplePayLogo stories snapshot > Decorative story renders and matches snapshot 1`] = `
<div
  style="background-color: rgb(0, 0, 0); padding: 20px; border-radius: 8px;"
>
  <img
    alt=""
    aria-hidden="true"
    class=" h-4 w-auto object-contain"
    height="16"
    src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
    style="filter: brightness(0) invert(1);"
    width="48"
  />
</div>
`;

exports[`ApplePayLogo stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  style="background-color: rgb(0, 0, 0); padding: 20px; border-radius: 8px;"
>
  <img
    alt="Apple Pay"
    class=" h-4 w-auto object-contain"
    height="16"
    src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
    style="filter: brightness(0) invert(1);"
    width="48"
  />
</div>
`;

exports[`ApplePayLogo stories snapshot > WithCustomClassName story renders and matches snapshot 1`] = `
<div
  style="background-color: rgb(0, 0, 0); padding: 20px; border-radius: 8px;"
>
  <img
    alt="Apple Pay"
    class="custom-class h-4 w-auto object-contain"
    height="16"
    src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxMDAiIGhlaWdodD0iMTAwIj48L3N2Zz4="
    style="filter: brightness(0) invert(1);"
    width="48"
  />
</div>
`;
